--- a/src/app/pages/start/start-page/start-page.component.html
+++ b/src/app/pages/start/start-page/start-page.component.html
@@ -3,9 +3,9 @@
 <div class="container-fluid fullscreen-background">
   <div class="row align-items-center w-100">
     <div class="col-md-6 p-4">
-      <p-card styleClass="info-card shadow-lg border-0" header="Мотивуйте себе" subheader="Досягнення своїх цілей">
-        <p class="lead text-light">Настав час розважатися під час виконання завдань! Приєднуйтесь до TrackTopias!</p>
-        <button pButton label="Дізнатися більше" icon="pi pi-info-circle" class="p-button-outlined info-button mt-3"></button>
+      <p-card styleClass="info-card shadow-lg border-0" [header]="'start.motivation' | translate" [subheader]="'start.achieveGoals' | translate">
+        <p class="lead text-light">{{ 'start.description' | translate }}</p>
+        <button pButton [label]="'start.learnMore' | translate" icon="pi pi-info-circle" class="p-button-outlined info-button mt-3"></button>
       </p-card>
     </div>
     <div class="col-md-6 d-flex justify-content-center align-items-center p-4">
