--- a/src/app/shared/auth/components/login/login.component.html
+++ b/src/app/shared/auth/components/login/login.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<p-panel header="Увійти в аккаунт" styleClass="shadow-sm">
+<p-panel [header]="'login.title' | translate" styleClass="shadow-sm">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="d-flex flex-column gap-2 p-3">
     <div class="p-float-label mb-3">
       <input id="username" pInputText type="text" formControlName="username" class="w-100" 
@@ -7,7 +7,7 @@
              [pTooltip]="getUsernameErrorMessage()" tooltipPosition="right" 
              [showDelay]="100" [hideDelay]="100"
              [tooltipDisabled]="!shouldShowTooltip(username)" />
-      <label for="username">Логін (нікнейм)</label>
+      <label for="username">{{ 'login.username' | translate }}</label>
     </div>
     
     <div class="p-float-label mb-4">
@@ -16,14 +16,14 @@
                   [pTooltip]="getPasswordErrorMessage()" tooltipPosition="right"
                   [showDelay]="100" [hideDelay]="100"
                   [tooltipDisabled]="!shouldShowTooltip(password)"></p-password>
-      <label for="password">Пароль</label>
+      <label for="password">{{ 'login.password' | translate }}</label>
     </div>
     
-    <button pButton type="submit" label="Увійти" class="p-3 fw-bold mt-3"></button>
+    <button pButton type="submit" [label]="'login.signIn' | translate" class="p-3 fw-bold mt-3"></button>
     
     <div class="text-center mt-3">
-      <span class="text-light">Немає аккаунту? </span>
-      <a href="#" class="fw-bold" (click)="onRegisterClick($event)">Зареєструватися</a>
+      <span class="text-light">{{ 'login.noAccount' | translate }} </span>
+      <a href="#" class="fw-bold" (click)="onRegisterClick($event)">{{ 'login.registerNow' | translate }}</a>
     </div>
   </form>
 </p-panel>
