--- a/src/app/pages/start/start-header/start-header.component.html
+++ b/src/app/pages/start/start-header/start-header.component.html
@@ -1,11 +1,11 @@
-<p-menubar [model]="menuItems">
-  <ng-template #start>
+<p-menubar [model]="menuItems" styleClass="fixed-top">
+  <ng-template pTemplate="start">
     <span class="fw-bold fs-4 me-4">TrackTopias</span>
   </ng-template>
 
-  <ng-template #item let-item let-root="root">
-    <a pRipple class="flex items-center p-menubar-item-link">
-      <span>{{ item.label }}</span>
+  <ng-template pTemplate="item" let-item let-root="root">
+    <a pRipple class="p-element flex align-items-center p-menuitem-link" (click)="item.command()">
+      <span class="p-menuitem-text">{{ item.label }}</span>
     </a>
   </ng-template>
 
